# Fithub

./: .gitignore  Cargo.toml  README.md
config/: banned_words.json
frontend/: capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: GymMap.tsx
frontend/src/config/: helpAnnotations.ts  navItems.tsx
frontend/src/hooks/: index.ts  useDebouncedValue.ts  useEscapeKey.ts  useInfiniteScroll.ts  useScrollDirection.ts  useSwipe.ts  useWindowEventListener.ts
frontend/src/pages/: AdminLevels.tsx  Contact.tsx  Dashboard.tsx  Exercises.tsx  Gear.tsx  GymSearch.tsx  Help.tsx  Login.tsx  Pet.tsx  Profile.tsx  Records.tsx  Register.tsx  Settings.tsx  Supplements.tsx
frontend/src/services/: adminApi.ts  api.ts  authApi.ts  configApi.ts  contactApi.ts  dailyRewardApi.ts  exerciseApi.ts  gearApi.ts  gymApi.ts  petApi.ts  streakApi.ts  supplementApi.ts  workoutApi.ts
frontend/src/stores/: authStore.ts  uiStore.ts
frontend/src/styles/: admin.css  common.css  contact.css  daily-reward.css  dashboard.css  devtools.css  exercises.css  fithub-icon.css  gear.css  gym_search.css  help.css  pet.css  records.css  settings.css  (+2 more)
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: admin.rs  auth.rs  contact.rs  daily_reward.rs  dashboard.rs  exercise.rs  gear.rs  gym.rs  mod.rs  pet.rs  public_config.rs  streak.rs  supplement.rs  user.rs  workout.rs
src/auth/: mod.rs  oauth_github.rs  oauth_google.rs  oauth_microsoft.rs  session.rs
src/db/: models.rs  pool.rs
src/middleware/: auth_guard.rs  basic_auth.rs  mod.rs
tests/: api_integration_test.rs
(+23 files in other folders)
