[package]
name = "fithub-fast"
version = "0.1.0"
edition = "2021"
authors = ["FithubFast Team"]
description = "High-performance fitness tracking API server"

[dependencies]
# Web framework
actix-web = { version = "4", features = ["compress-gzip", "compress-brotli"] }
actix-rt = "2"
actix-cors = "0.7"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-identity = "0.8"
actix-multipart = "0.7"
once_cell = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OAuth2
oauth2 = "4"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Password hashing
argon2 = "0.5"
bcrypt = "0.15"

# Environment & Config
dotenvy = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Random number generation
rand = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"
base64 = "0.22.1"
futures = "0.3.31"
aws-config = "1"
aws-sdk-s3 = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.12", features = ["json", "cookies"] }
